--- a/Seminar6/style.css
+++ b/Seminar6/style.css
@@ -112,12 +112,11 @@ header{
     margin-right: 16px;
 }
 
-.blocks{
+.ad_blocks{
     display: grid;
     grid-template-columns: repeat(3, 3fr);
     gap: 30px;
 }
-
 .ad_block {
     position: relative;
     display: flex;
@@ -154,11 +153,17 @@ header{
     margin: 96px auto 48px;
 }
 
+.blocks{
+    display: grid;
+    grid-template-columns: repeat(3, 3fr);
+    gap: 30px;
+}
 .block{
     background-color: #F8F8F8;
 }
 .product-img{
     display: flex;
+    width: 100%;
     height: 420px;
     justify-content: center;
 }
@@ -185,4 +190,21 @@ button{
     background-color: #F8F8F8;
     font-size: 16px;
     font-weight: 400;
+}
+
+@media screen and (max-width: 1440px) and (min-width: 768px){
+    .center{
+        width: 100%;
+    }
+    .left-block{
+        height: 30vh;
+        margin-right: 39px;
+    }
+    .ad_blocks{
+        margin: 0 16px;
+    }
+    .blocks{
+        grid-template-columns: repeat(2, 3fr);
+        margin: 0 16px;
+    }
 }
