--- a/Seminar6/style.css
+++ b/Seminar6/style.css
@@ -80,9 +80,13 @@ header{
     display: flex;
     align-items: center;
 }
+.all_header{
+    width: 100%;
+    padding: 0 16px;
+}
 .header{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .start-header{
     display: flex;
@@ -102,6 +106,10 @@ header{
     justify-content: flex-end;
     width: 50%;
     margin-right: 64px;
+}
+.left-block img{
+    max-width: 100%;
+    height: auto;
 }
 .right-block{
     display: flex;
@@ -125,6 +133,7 @@ header{
 }
 .block_img{
     position: relative;
+    width: 100%;
 }
 .block_txt{
     position: absolute;
@@ -156,6 +165,7 @@ header{
 .blocks{
     display: grid;
     grid-template-columns: repeat(3, 3fr);
+    
     gap: 30px;
 }
 .block{
@@ -164,11 +174,21 @@ header{
 .product-img{
     display: flex;
     width: 100%;
-    height: 420px;
     justify-content: center;
 }
+
+/* .product-img img{
+    max-width: 100%;
+    height: auto;
+    display: flex;
+    max-height: 420px;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+} */
 .product-block2{
-    background-color: #F7E4E2;;
+    background-color: #F7E4E2;
 }
 .product-info{
     padding: 24px 16px;
@@ -191,20 +211,26 @@ button{
     font-size: 16px;
     font-weight: 400;
 }
-
-@media screen and (max-width: 1440px) and (min-width: 768px){
+@media screen and (max-width: 1439px){
+    .header{
+        padding: 0 50px;
+        justify-content: space-between;
+    }
     .center{
         width: 100%;
+        padding: 0 16px;
     }
-    .left-block{
-        height: 30vh;
-        margin-right: 39px;
+    .big-txt{
+        font-size: 44px;
     }
-    .ad_blocks{
-        margin: 0 16px;
+    .additional-txt{
+        font-size: 24px;
     }
     .blocks{
         grid-template-columns: repeat(2, 3fr);
-        margin: 0 16px;
     }
+}
+
+@media screen and (max-width: 768px){
+    
 }
