--- a/Seminar6/style.css
+++ b/Seminar6/style.css
@@ -144,6 +144,11 @@ header {
     width: 50%
 }
 
+.brand{
+    padding-left: 16px;
+    border-left: 12px solid #F16D7F;
+}
+
 .rectangle {
     margin-right: 16px;
 }
@@ -212,16 +217,6 @@ header {
     justify-content: center;
 }
 
-/* .product-img img{
-    max-width: 100%;
-    height: auto;
-    display: flex;
-    max-height: 420px;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    object-fit: cover; 
-} */
 .product-block2 {
     background-color: #F7E4E2;
 }
@@ -250,6 +245,76 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.services-background{
+    background-color:  #222224;
+}
+.services{
+    display: flex;
+    gap: 30px;
+    padding: 104px 0;
+}
+.service{
+    display: grid;
+    justify-content: center
+}
+.service img{
+    margin: auto;
+}
+.service-name{
+    font-weight: 400;
+    color: #FBFBFB;
+    font-size: 19.96px;
+    margin: 25px auto 16px;
+}
+.service-description{
+    color: #FBFBFB;
+    font-size: 13.972px;
+    text-align: center;
+    font-weight: 300;
+    opacity: 0.7;
+    padding: 0 30px ;
+}
+
+.subscribe{
+    background-image: "img/Layer 41.png";
+    display: flex;
+}
+.citation{
+    width: 359.449px;
+    height: 99px;
+    color: #222224;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+footer{
+    background-color:  #222224;
+}
+.footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.footer-brand{
+    color: #FBFBFB;
+    font-size: 16px;
+    font-weight: 400;
+}
+.media{
+    display: flex;
+    gap: 7px;
+    margin: 24px;
+}
+.social-media{
+    height: 32px;
+    width: 32px;
+    background-color: #FFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 @media screen and (max-width: 1440px) {
