--- a/Seminar6/style.css
+++ b/Seminar6/style.css
@@ -22,14 +22,12 @@
     font-weight: 900;
 }
 
-html {
-    font-family: Lato;
-}
-
+html,
 body,
 h1,
 h2,
 p {
+    font-family: Lato;
     margin: 0;
 }
 
@@ -144,7 +142,7 @@ header {
     width: 50%
 }
 
-.brand{
+.brand {
     padding-left: 16px;
     border-left: 12px solid #F16D7F;
 }
@@ -227,12 +225,9 @@ header {
     display: grid;
 }
 
-.button {
+.button-product {
     display: flex;
-    justify-content: center
-}
-
-button {
+    justify-content: center;
     margin: 48px auto 60px;
     text-align: center;
     width: 212px;
@@ -247,68 +242,168 @@ button {
     justify-content: center;
 }
 
-.services-background{
-    background-color:  #222224;
+.services-background {
+    background-color: #222224;
 }
-.services{
+
+.services {
     display: flex;
     gap: 30px;
     padding: 104px 0;
 }
-.service{
+
+.service {
     display: grid;
     justify-content: center
 }
-.service img{
+
+.service img {
     margin: auto;
 }
-.service-name{
-    font-weight: 400;
-    color: #FBFBFB;
-    font-size: 19.96px;
-    margin: 25px auto 16px;
-}
-.service-description{
+
+.service p {
     color: #FBFBFB;
     font-size: 13.972px;
     text-align: center;
     font-weight: 300;
     opacity: 0.7;
-    padding: 0 30px ;
+    padding: 0 30px;
 }
 
-.subscribe{
-    background-image: "img/Layer 41.png";
-    display: flex;
+.service-name {
+    font-weight: 400;
+    color: #FBFBFB;
+    font-size: 19.96px;
+    margin: 25px auto 16px;
 }
-.citation{
+
+
+
+.subscribe-background-img {
+    background-image: url("img/Layer 41.png");
+    background-size: cover;
+}
+
+.subscribe-background-color {
+    background-color: #F4F4F4B2;
+}
+
+.subscribe {
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.citation-block {
+    margin: 96px 0 156px;
+    display: grid;
+    justify-items: center;
+    gap: 30px;
+}
+
+.citation {
     width: 359.449px;
-    height: 99px;
     color: #222224;
     text-align: center;
     font-size: 20px;
     font-weight: 400;
 }
 
-footer{
-    background-color:  #222224;
+.citation span {
+    font-style: italic;
 }
-.footer{
+
+.subscribe-block {
+    margin: 150px 0 156px;
+    gap: 32px;
+}
+
+.subscribe-block h2 {
+    color: #222224;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.subscribe-block span {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.subscribe-block form {
+    display: flex;
+    align-items: center;
+    margin-top: 32px;
+
+}
+
+.subscribe-block input {
+    width: 170px;
+    height: 36px;
+}
+
+.subscribe-block input:focus {
+    outline: none;
+}
+
+.subscribe-block svg {
+    position: absolute;
+}
+
+.subscribe-block input {
+    background: none;
+    border: none;
+    padding: 0;
+    position: absolute;
+    margin: 0 64px 0 22px;
+}
+
+.subscribe-block button {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    left: 256px;
+}
+
+.subscribe-block button p {
+    position: absolute;
+    color: #FFF;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+form {
+    display: flex;
+}
+
+footer {
+    background-color: #222224;
+}
+
+.footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.footer-brand{
+
+.footer-brand {
     color: #FBFBFB;
     font-size: 16px;
     font-weight: 400;
 }
-.media{
+
+.media {
     display: flex;
     gap: 7px;
     margin: 24px;
 }
-.social-media{
+
+.social-media {
     height: 32px;
     width: 32px;
     background-color: #FFF;
@@ -398,4 +493,57 @@ footer{
         width: calc(100% - 16px);
     }
 
+    .services {
+        display: grid;
+        gap: 48px;
+        padding: 48px 0 64px;
+    }
+
+    .service p {
+        width: 310px;
+        padding: 0;
+    }
+
+    .subscribe-background-img {
+        background-repeat: no-repeat;
+        background-position: -350px center;
+    }
+
+    .subscribe {
+        display: grid;
+        justify-content: center
+    }
+
+    .citation-block {
+        margin: 64px 0 59px;
+    }
+
+    .subscribe-block {
+        margin: 0 auto 140px;
+    }
+
+    .subscribe-block form {
+        margin-top: 22px;
+    }
+
+    .subscribe-block button {
+        left: 241px;
+    }
+
+    .footer {
+        display: grid;
+        align-items: center;
+        justify-content: center;
+        justify-items: center;
+    }
+
+    .footer-brand {
+        order: 2;
+        margin-bottom: 9px;
+    }
+
+    .media {
+        order: 1;
+        margin: 43px auto 40px;
+    }
 }
