--- a/Seminar6/style.css
+++ b/Seminar6/style.css
@@ -26,7 +26,8 @@ html,
 body,
 h1,
 h2,
-p {
+p,
+ul {
     font-family: Lato;
     margin: 0;
 }
@@ -112,6 +113,74 @@ header {
 .menu {
     display: flex;
     gap: 25px;
+}
+
+.header-menu1 {
+    display: flex;
+}
+
+.hidden-menu {
+    position: fixed;
+    top: 75px;
+    right: 0;
+    padding: 32px;
+    padding-right: 75px;
+    background-color: #FFFFFF;
+    visibility: hidden;
+}
+
+.hidden-menu h2 {
+    color: #000;
+    font-size: 14px;
+    font-weight: 700;
+}
+
+.hidden-menu p {
+    color: #F16D7F;
+    font-size: 14px;
+    font-weight: 400;
+    margin: 20px auto 12px;
+}
+
+.hidden-menu ul {
+    display: grid;
+    gap: 11px;
+    list-style-type: none;
+    padding-left: 21px;
+}
+
+.hidden-menu li {
+    color: #6F6E6E;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.header-menu1:hover .hidden-menu {
+    visibility: visible;
+}
+
+.header-menu3 {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header-menu3::after {
+    position: absolute;
+    content: '5';
+    top: -3px;
+    right: -10px;
+    width: 19px;
+    height: 19px;
+    background-color: #F16D7F;
+    color: white;
+    border-radius: 50%;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    font-weight: 400;
 }
 
 .main-post-background {
@@ -201,12 +270,53 @@ header {
 .blocks {
     display: grid;
     grid-template-columns: repeat(3, 3fr);
-
     gap: 30px;
 }
 
 .block {
     background-color: #F8F8F8;
+
+}
+
+.add-to-cart {
+    position: relative;
+}
+
+.button-buy {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(58, 56, 56, 0.86);
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    transition-delay: 0s;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.button-buy button {
+    background: none;
+    border: 1px solid #FFF;
+    padding: 11px 13px;
+    display: flex;
+    align-items: center;
+    gap: 11px;
+}
+
+.button-buy button:hover {
+    transform: scale(1.1);
+}
+
+.button-buy button:active {
+    transform: scale(0.95);
+}
+
+.button-buy button p {
+    color: #FFF;
+    font-size: 14px;
+    font-weight: 400;
 }
 
 .product-img {
@@ -215,9 +325,10 @@ header {
     justify-content: center;
     position: relative;
 }
-.block:hover .product-img::after{
-    content: "";
-    position: absolute;
+
+.block:hover .button-buy {
+    opacity: 1;
+    transition-delay: 3s;
 }
 
 .product-info {
@@ -243,9 +354,10 @@ header {
     justify-content: center;
     color: #FF6A6A;
 }
-.button-product:hover{
-    background-color:#F16D7F;
-    color:#FFF;
+
+.button-product:hover {
+    background-color: #F16D7F;
+    color: #FFF;
 }
 
 .services-background {
@@ -419,10 +531,11 @@ footer {
 }
 
 .social-media:hover {
-    background-color:#F16D7F;
+    background-color: #F16D7F;
     transition: filter 0.3s;
 }
-.social-media:hover path{
+
+.social-media:hover path {
     fill: #FFFFFF;
 }
 
